--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    html {
+        font-family: 'Mulish', sans-serif;
+        /*font-family: 'Open Sans', sans-serif;*/
+    }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+
+:root {
+    --dm-color-primary: rgb(8, 8, 67);
+    --dm-color-primary-gradient: linear-gradient(90deg, rgba(8,8,67,1) 0%, rgba(33,33,82,1) 33%, rgba(33,33,82,1) 60%, rgba(8,8,67,1) 100%);
+    --lm-color-primary: #fbfafb;
+}
+
+.bg-var-dm-color-primary {
+    background: var(--dm-color-primary);
+}
+
+.bg-var-dm-color-primary-gradient {
+    background: var(--dm-color-primary-gradient);
+}
+
+.bg-var-lm-color-primary {
+    color: var(--lm-color-primary);
 }
